readme and rename

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,9 @@
-  
-name: Test
+name: Build
 on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
-    - name: Build the Docker image
-      run: docker build .
+      - uses: actions/checkout@master
+      - name: Build the Docker image
+        run: docker build .
